# pyshell

./: README.md  pyproject.toml
src/pyshell/: main.py
